tests/ui/regions/region-multiple-lifetime-bounds-on-fns-where-clause.stderr
error[E0308]: mismatched types
  --> $DIR/region-multiple-lifetime-bounds-on-fns-where-clause.rs:22:56
   |
LL |     let _: fn(&mut &isize, &mut &isize, &mut &isize) = a;
   |            -----------------------------------------   ^ one type is more general than the other
   |            |
   |            expected due to this
   |
   = note: expected fn pointer `for<'a, 'b, 'c, 'd, 'e, 'f> fn(&'a mut &'b _, &'c mut &'d _, &'e mut &'f _)`
                 found fn item `for<'a, 'b, 'c> fn(&'a mut &_, &'b mut &_, &'c mut &_) {a::<'_, '_, '_>}`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
